tests/invalid/len_non_sequence/main.py
def run_case() -> None:
    x: int = 42

    y: int = len(x)

if __name__ == "__main__":
    run_case()
